# SimpleKeygen

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LicenseServer.cpp  README.md  docker-compose.yaml  init.sql  main.cpp
